assignment_1/src/c-.output
Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmts: stmt stmts
    3      | stmt

    4 stmt: ID
    5     | NUMCONST
    6     | CHARCONST
    7     | STRINGCONST
    8     | BOOLCONST
    9     | KEYWORD
   10     | TOKEN


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ID <tokenData> (258) 4
    NUMCONST <tokenData> (259) 5
    CHARCONST <tokenData> (260) 6
    STRINGCONST <tokenData> (261) 7
    BOOLCONST <tokenData> (262) 8
    KEYWORD <tokenData> (263) 9
    TOKEN <tokenData> (264) 10


Nonterminals, with rules where they appear

    $accept (10)
        on left: 0
    program (11)
        on left: 1
        on right: 0
    stmts (12)
        on left: 2 3
        on right: 1 2
    stmt (13)
        on left: 4 5 6 7 8 9 10
        on right: 2 3


State 0

    0 $accept: . program $end

    ID           shift, and go to state 1
    NUMCONST     shift, and go to state 2
    CHARCONST    shift, and go to state 3
    STRINGCONST  shift, and go to state 4
    BOOLCONST    shift, and go to state 5
    KEYWORD      shift, and go to state 6
    TOKEN        shift, and go to state 7

    program  go to state 8
    stmts    go to state 9
    stmt     go to state 10


State 1

    4 stmt: ID .

    $default  reduce using rule 4 (stmt)


State 2

    5 stmt: NUMCONST .

    $default  reduce using rule 5 (stmt)


State 3

    6 stmt: CHARCONST .

    $default  reduce using rule 6 (stmt)


State 4

    7 stmt: STRINGCONST .

    $default  reduce using rule 7 (stmt)


State 5

    8 stmt: BOOLCONST .

    $default  reduce using rule 8 (stmt)


State 6

    9 stmt: KEYWORD .

    $default  reduce using rule 9 (stmt)


State 7

   10 stmt: TOKEN .

    $default  reduce using rule 10 (stmt)


State 8

    0 $accept: program . $end

    $end  shift, and go to state 11


State 9

    1 program: stmts .

    $default  reduce using rule 1 (program)


State 10

    2 stmts: stmt . stmts
    3      | stmt .

    ID           shift, and go to state 1
    NUMCONST     shift, and go to state 2
    CHARCONST    shift, and go to state 3
    STRINGCONST  shift, and go to state 4
    BOOLCONST    shift, and go to state 5
    KEYWORD      shift, and go to state 6
    TOKEN        shift, and go to state 7

    $default  reduce using rule 3 (stmts)

    stmts  go to state 12
    stmt   go to state 10


State 11

    0 $accept: program $end .

    $default  accept


State 12

    2 stmts: stmt stmts .

    $default  reduce using rule 2 (stmts)
